subida de admin, estilos e imagenes

--- a/index.html
+++ b/index.html
@@ -2,12 +2,318 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE
-        =edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-devide-width, initial-scale=1.0">
         <title>Pasteleria Tentacion</title>
+        <link rel="stylesheet" href="estilos.css">
+        <STYLE>A {text-decoration: none;} </STYLE>
     </head>
     <body>
-        <h1></h1>
+        <header>
+            <nav>
+                <div class>
+                    <a href="index.html" target="_blank">
+                        <h1 class="title">Pasteleria Tentacion</h1>
+                    </a>
+                </div>
+                <div class="links">
+                  <a class="a" href="#Inicio">Inicio</a>
+                  <a class="a" href="#Menú">Menu</a>
+                  <a class="a" href="#Pedidos">Pedidos</a>
+                  <a class="a" href="./admin.html">Admin</a>
+                </div>
+            </nav>
+        </header>
+        <div class="slider">
+            <ul class="sli_img">
+                <li class="li_img">
+                    <img src="./torta header.jpg" class="slider_img" alt>
+                </li>
+                <li class="li_img">
+                    <img src="./torta header2.jpg" class="slider_img" alt>
+                </li>
+                <li class="li_img">
+                    <img src="./torta header4.jpg" class="slider_img" alt>
+                </li>
+            </ul>
+        </div>
+        <!--Menú-->
+        <section id="Menú" class="menu">
+            <div class="title_menu">
+                <h1>Menú</h1>
+                <p>Nuestro catálogo de pasteles hechos especialmente para ti.</p>
+            </div>
+            <div class="tortas_menu">
+                <div class="cointeiner">
+                    <div class="card">
+                        <figure class="pasteles_img">
+                            <img class="Boda" src="./tortaboda.jpg">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Boda</h3>
+                            <p>Pastel de bodas con crema y duraznos</p>
+                            <a href="#Pedidos">$25.000</a>
+                        </div>
+                    </div>
+                <div class="cointeiner">
+                    <div class="card">
+                        <figure class="torta_img">
+                            <img class="cumple" src="./pastelcumpleaños.jpg">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Cumpleaños</h3>
+                            <p>Pastel de cumpleaños con chocolate y dulce de leche</p>
+                            <a href="#Pedidos">$10.000</a>
+                        </div>
+                    </div>    
+                </div>
+                <div class="cointeiner">
+                    <div class="card">
+                        <figure class="torta_img">
+                            <img class="Chocotorta" src="./torta header4.jpg">
+                        </figure>
+                        <div class="contenido">
+                            <h3>Chocotorta</h3>
+                            <p>Pastel de galletitas chocolinas y dulce de leche con crema y café</p>
+                            <a href="#Pedidos">$3.000</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="Menú" class="menu">
+            <div class="title_menu">
+                <h2>Decoraciones</h2>
+                <p>Puedes elegir las decoraciones que más gustes para sumar a tus pasteles.</p>
+            </div>
+            <div class="cointeiner">
+                <div class="card">
+                    <figure class="decoraciones_img">
+                        <img class="chispas" src="./adornos chispas.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Chispas</h3>
+                        <p>Chispas para darle más color a tu pastel</p>
+                        <a href="#Pedidos">$100</a>
+                    </div>
+                </div>
+             </div>   
+            <div class="cointeiner">
+                <div class="card">
+                    <figure class="decoraciones_img">
+                        <img class="flores" src="./adornoflores.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Flores</h3>
+                        <p>Flores para darle belleza y distinción</p>
+                        <a href="#Pedidos">$200</a>
+                    </div>
+                </div>
+            </div>
+            <div class="cointeiner">
+                <div class="card">
+                    <figure class="decoraciones_img">
+                        <img class="letras" src="./adornosletras.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Letras</h3>
+                        <p>Letras personalizadas para el mensaje que tu quieras</p>
+                        <a href="#Pedidos">$100</a>
+                    </div>
+                </div>
+             </div>   
+            </div>
+            </div>      
+        </section>
+        <section id="Menú" class="menu">
+            <div class="title_menu">
+                <h2>Sabores</h2>
+                <p>Puedes elegir los sabores que más gustes para sumar a tus pasteles.</p>
+            </div>
+            <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="cheesecake" src="./sabor cheesecake.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Cheesecake</h3>
+                        <a href="#Pedidos">$3500</a>
+                    </div>
+                </div>
+             </div>
+             <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="chocolate" src="./sabor chocolate.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Chocolate</h3>
+                        <a href="#Pedidos">$3000</a>
+                    </div>
+                </div>
+             </div>
+             <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="crema y durazno" src="./sabor crema y durazno.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Crema y duraznos</h3>
+                        <a href="#Pedidos">$4000</a>
+                    </div>
+                </div>
+             </div>
+             <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="dulce de leche" src="./sabor dulce de leche.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Dulce de leche</h3>
+                        <a href="#Pedidos">$2900</a>
+                    </div>
+                </div>
+             </div>
+             <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="Frutilla" src="./sabor frutilla.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Frutillas</h3>
+                        <a href="#Pedidos">$4000</a>
+                    </div>
+                </div>
+             </div>
+             <div class="cointeiner">
+                <div class="card">
+                    <figure class="sabores_img">
+                        <img class="limon" src="./sabor limon.jpg">
+                    </figure>
+                    <div class="contenido">
+                        <h3>Limón</h3>
+                        <a href="#Pedidos">$3500</a>
+                    </div>
+                </div>
+             </div>     
+            </div>
+        </section>        
+    <!--- Formulario para q el cliente haga su pedido --->
+        <section id="Pedidos">
+            <div class="pedido_titulo">
+                <h2>¡Haz tu pedido!</h2>
+                <p>Completa el formulario para realizar tu pedido</p>
+            </div>
+            <form action class="form">
+                <div class="formu1">
+                    <h3 class="subtitulo">Datos de envío</h3>
+                    <div class="inputbox">
+                        <label for="input" class="form_label">Nombre</label>
+                        <input id="input" type="text" required="required">
+                        <span class="form_line"></span>
+                    </div>
+                    <div class="inputbox">
+                        <label for="email" class="form_label">Correo electrónico</label>
+                        <input id="email" type="email" required="required">
+                        <span class="form_line"></span>
+                    </div>
+                    <div class="inputbox">
+                        <label for="tel" class="form_label">Teléfono</label>
+                        <input id="tel" type="tel" required="required" maxlength="10">
+                        <span class="form_line"></span>
+                    </div>
+                    <div class="inputbox">
+                        <label for="direccion" class="form_label">Dirección</label>
+                        <input id="direccion" type="text" required="required">
+                        <span class="form_line"></span>
+                    </div>
+                    <div class="inputbox">
+                        <label for="comentarios" class="form_label">Comentarios</label>
+                        <input id="comentarios" type="text" required="required">
+                        <span class="form_line"></span>
+                    </div>
+                <br>
+                <br>
+                </div>
+                <div class="formu1">
+                    <h3 class="subtitulo">Pedido</h3>
+                    <p>Decoraciones</p>
+                    <div class="decoracionesform">
+                        <input type="checkbox" id="Chispas" name="Chispas" required="required">
+                        <label for="Chispas">
+                            Chispas
+                         </label>
+                        <br>
+                        <input type="checkbox" id="Flores" name="Flores" required="required">
+                        <label for="Flores">
+                            Flores
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Letras" name="Letras" required="required">
+                        <label for="Letras">
+                            Letras
+                        </label>
+                        <br>
+                    </div>
+                    <p>Sabores</p>
+                    <div class="saboresform">
+                        <input type="checkbox" id="Cheesecake" name="Cheesecake" required="required">
+                        <label for="Cheesecake">
+                            Cheescake
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Chocolate" name="Chocolate" required="required">
+                        <label for="Chocolate">
+                            Chocolate
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Crema y duraznos" name="Crema y duraznos" required="required">
+                        <label for="Crema y duraznos">
+                            Crema y duraznos
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Dulce de leche" name="Dulce de leche" required="required">
+                        <label for="Dulce de leche">
+                            Dulce de leche
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Frutillas" name="Frutillas" required="required">
+                        <label for="Frutillas">
+                            Frutillas
+                        </label>
+                        <br>
+                        <input type="checkbox" id="Limón" name="Limón" required="required">
+                        <label for="Limón">
+                            Limón
+                        </label>
+                        <br>
+                    </div>
+                </div>    
+                <div class="botones">
+                    <div class="boton">
+                        <button typer="submit">Realizar pedido</button>
+                    </div>
+                    <div class="boton">
+                        <button type="submit">Eliminar pedido</button>
+                    </div>
+                </div>
+            </form>
+        </section>
+
+        <footer class="footer">
+            <div class="footer-txt">
+                <div>
+                    <hr>
+                    <p class="font-bold">SOBRE NOSOTROS</p>
+                    <hr>
+                    <h3 class="font-bold">DIRECCION</h3>
+                    <p>Avenida Corrientes 567</p>
+                    <h3 class="font-bold">HORARIO</h3>
+                    <p>7AM - 7PM</p>
+                    <h3 class="font-bold">CONTACTO</h3>
+                    <p>1198765432</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html> 
